--- a/login.html
+++ b/login.html
@@ -1,136 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - Pink Blossom</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-    }
-    body {
-      height: 100vh;
-      background: linear-gradient(135deg, #fbc2eb, #a6c1ee);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Login - Pink Blossom</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  body, html {
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
+    background: linear-gradient(135deg, #fce4ec, #f8bbd0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .login-container {
+    background: #fff0f6;
+    padding: 3rem 2.5rem;
+    border-radius: 20px;
+    width: 350px;
+    box-shadow: 0 15px 30px rgba(244, 143, 177, 0.25);
+    text-align: center;
+  }
+  .login-container h2 {
+    color: #d81b60;
+    font-weight: 600;
+    margin-bottom: 1rem;
+  }
+  .login-container p {
+    color: #ad1457;
+    margin-bottom: 2rem;
+  }
+  .form-group {
+    margin-bottom: 1.5rem;
+    text-align: left;
+  }
+  label {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: 600;
+    color: #880e4f;
+    font-size: 0.9rem;
+  }
+  input[type="email"],
+  input[type="password"] {
+    width: 100%;
+    padding: 12px 15px;
+    border: 2px solid #f48fb1;
+    border-radius: 12px;
+    font-size: 1rem;
+    transition: border-color 0.3s ease;
+  }
+  input[type="email"]:focus,
+  input[type="password"]:focus {
+    border-color: #ce93d8;
+    outline: none;
+  }
+  button {
+    width: 100%;
+    background: #d81b60;
+    border: none;
+    color: white;
+    padding: 14px 0;
+    font-size: 1.1rem;
+    border-radius: 15px;
+    cursor: pointer;
+    font-weight: 600;
+    box-shadow: 0 6px 12px rgba(216, 27, 96, 0.5);
+    transition: background-color 0.3s ease;
+  }
+  button:hover {
+    background: #ad1457;
+  }
+  .forgot-password {
+    margin-top: 1rem;
+    font-size: 0.85rem;
+    color: #ba68c8;
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  .forgot-password:hover {
+    color: #8e24aa;
+  }
+  .error-message {
+    color: #d32f2f;
+    font-size: 0.9rem;
+    margin-top: 0.5rem;
+    display: none;
+  }
+  @media (max-width: 400px) {
     .login-container {
-      background-color: #fff0f5;
-      padding: 2.5rem 3rem;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(255, 182, 193, 0.4);
-      width: 100%;
-      max-width: 400px;
-      text-align: center;
+      width: 90%;
+      padding: 2rem 1.5rem;
     }
-    h2 {
-      color: #d36ba6;
-      margin-bottom: 1.5rem;
-      font-size: 2rem;
-    }
-    .form-group {
-      margin-bottom: 1.2rem;
-      text-align: left;
-    }
-    label {
-      display: block;
-      margin-bottom: 0.4rem;
-      color: #a14b7d;
-      font-weight: bold;
-    }
-    input[type="text"],
-    input[type="password"] {
-      width: 100%;
-      padding: 0.75rem;
-      border: 2px solid #f8cdd9;
-      border-radius: 12px;
-      font-size: 1rem;
-    }
-    input:focus {
-      border-color: #ff99cc;
-      outline: none;
-      box-shadow: 0 0 5px #ffb6c1;
-    }
-    .login-btn {
-      margin-top: 1.2rem;
-      width: 100%;
-      padding: 0.85rem;
-      border: none;
-      border-radius: 12px;
-      background-color: #ff69b4;
-      color: white;
-      font-size: 1.1rem;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    .login-btn:hover {
-      background-color: #e754a5;
-    }
-    .error-message {
-      color: #d03e3e;
-      font-size: 0.9rem;
-      margin-top: 0.5rem;
-      display: none;
-    }
-    .footer-text {
-      margin-top: 1.5rem;
-      font-size: 0.9rem;
-      color: #7a557f;
-    }
-    .footer-text a {
-      color: #ff69b4;
-      text-decoration: none;
-    }
-    .footer-text a:hover {
-      text-decoration: underline;
-    }
-  </style>
+  }
+</style>
 </head>
 <body>
-  <div class="login-container">
-    <h2>Login</h2>
-    <form id="loginForm" novalidate>
+  <div class="login-container" role="main" aria-label="Login form">
+    <h2>Welcome Back</h2>
+    <p>Sign in to continue to Pink Blossom</p>
+    <form id="loginForm">
       <div class="form-group">
-        <label for="username">Username or Email</label>
-        <input type="text" id="username" name="username" required />
-        <div class="error-message" id="usernameError">Please enter your username or email.</div>
+        <label for="emailInput">Email Address</label>
+        <input type="email" id="emailInput" name="email" required placeholder="you@example.com" autocomplete="username" />
+        <div class="error-message" id="emailError">Please enter your email.</div>
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required />
+        <label for="passwordInput">Password</label>
+        <input type="password" id="passwordInput" name="password" required placeholder="Your password" autocomplete="current-password" />
         <div class="error-message" id="passwordError">Please enter your password.</div>
       </div>
-      <button type="submit" class="login-btn">Login</button>
+      <button type="submit">Log In</button>
       <div class="error-message" id="loginError"></div>
     </form>
-    <p class="footer-text">Don't have an account? <a href="index.html">Create one</a></p>
+    <div class="forgot-password" tabindex="0" role="button">Forgot Password?</div>
   </div>
 
   <script>
-    const loginForm = document.getElementById('loginForm');
-    const usernameInput = document.getElementById('username');
-    const passwordInput = document.getElementById('password');
-    const usernameError = document.getElementById('usernameError');
+    const form = document.getElementById('loginForm');
+    const emailInput = document.getElementById('emailInput');
+    const passwordInput = document.getElementById('passwordInput');
+    const emailError = document.getElementById('emailError');
     const passwordError = document.getElementById('passwordError');
 
-    loginForm.addEventListener('submit', function(event) {
-      event.preventDefault();
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
 
       let isValid = true;
 
-      if (usernameInput.value.trim() === '') {
-        usernameError.style.display = 'block';
+      if (!emailInput.value.trim()) {
+        emailError.style.display = 'block';
         isValid = false;
       } else {
-        usernameError.style.display = 'none';
+        emailError.style.display = 'none';
       }
 
-      if (passwordInput.value.trim() === '') {
+      if (!passwordInput.value.trim()) {
         passwordError.style.display = 'block';
         isValid = false;
       } else {
@@ -138,9 +150,14 @@
       }
 
       if (isValid) {
-        // Langsung redirect ke index.html
+        // Langsung arahkan ke landing page
         window.location.href = 'index.html';
       }
+    });
+
+    // Optional: forgot password action
+    document.querySelector('.forgot-password').addEventListener('click', () => {
+      alert('Password reset feature is not implemented in this demo.');
     });
   </script>
 </body>
